name:                hacmaes
version:             0.1.0.0
license:             ISC
license-file:        LICENSE
author:              Mikko Juola
maintainer:          mikko.juola+dev@iki.fi
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Data.CMAES
  build-depends:       async
                      ,base >=4.6 && <5.0
                      ,containers
                      ,primitive
                      ,stm
                      ,transformers
  hs-source-dirs:      src
  ghc-options:         -Wall -fno-warn-name-shadowing
  c-sources:           cbits/cmaes.cc
  cc-options:          -fno-rtti -std=c++11 -fopenmp
  extra-libraries:     cmaes
                       gomp
                       stdc++
  default-language:    Haskell2010

